// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildInitialMessage > renders coder assignment 1`] = `
"## Task Assignment

## Shared Project Context
[FIXTURE HANDOFF]

**Task ID:** coder-task
**Stage ID:** stage-1
**Type:** code
**Attempt:** 2 of 4

### Description
Complete the coder task

### Checklist
- [REQUIRED] first acceptance check

### Instructions
Write the report to: .saivage/stages/stage-1/reports/coder-task.json
Commit using git with message prefix: [coder-task] if you modify files.
Return the full TaskReport JSON as your final response."
`;

exports[`buildInitialMessage > renders critic assignment 1`] = `
"## Design Critique Task Assignment

## Shared Project Context
[FIXTURE HANDOFF]

**Task ID:** critic-task
**Stage ID:** stage-1
**Type:** critique
**Attempt:** 2 of 4

### Description
Complete the critic task

### Checklist
- [REQUIRED] first acceptance check

### Instructions
Read the design artifacts named in the task and any referenced source/docs needed to judge them in context.
Write a standalone critique document at the project-relative path that best fits the artifact under review (e.g. research/design/critiques/<artifact-id>.md, docs/critiques/<artifact-id>.md, or .saivage/stages/<stage-id>/critiques/<task-id>.md).
Do not rewrite the design yourself; tell the Designer what to fix via issues_found[] and the critique document.
Write optional detailed notes to: .saivage/stages/stage-1/critiques/
Write the report to: .saivage/stages/stage-1/reports/critic-task.json
Commit using git with message prefix: [critic-task] if you modify files.
Return the full TaskReport JSON as your final response."
`;

exports[`buildInitialMessage > renders data-agent assignment 1`] = `
"## Data Acquisition Task Assignment

## Shared Project Context
[FIXTURE HANDOFF]

**Task ID:** data_agent-task
**Stage ID:** stage-1
**Type:** data
**Attempt:** 2 of 4

### Description
Complete the data_agent task

### Checklist
- [REQUIRED] first acceptance check

### Instructions
Write downloaded artifacts to the project-relative path that best fits the task; data/ is common but not mandatory.
Write provenance notes under research/data-sources/ or another clearly named research/provenance path.
Use retries, fallback source URLs, alternate access methods, and an attempt manifest when downloads are unreliable.
Write the report to: .saivage/stages/stage-1/reports/data_agent-task.json
Commit using git with message prefix: [data_agent-task] if you modify files.
Return the full TaskReport JSON as your final response."
`;

exports[`buildInitialMessage > renders designer assignment 1`] = `
"## Design Task Assignment

## Shared Project Context
[FIXTURE HANDOFF]

**Task ID:** designer-task
**Stage ID:** stage-1
**Type:** design
**Attempt:** 2 of 4

### Description
Complete the designer task

### Checklist
- [REQUIRED] first acceptance check

### Instructions
Produce design artifacts that are concrete enough for implementation and review.
Write optional detailed notes to: .saivage/stages/stage-1/design-notes/
Write the report to: .saivage/stages/stage-1/reports/designer-task.json
Commit using git with message prefix: [designer-task] if you modify files.
Return the full TaskReport JSON as your final response."
`;

exports[`buildInitialMessage > renders researcher assignment 1`] = `
"## Research Task Assignment

## Shared Project Context
[FIXTURE HANDOFF]

**Task ID:** researcher-task
**Stage ID:** stage-1
**Type:** research
**Attempt:** 2 of 4

### Description
Complete the researcher task

### Checklist
- [REQUIRED] first acceptance check

### Instructions
Write findings under: research/
Write the report to: .saivage/stages/stage-1/reports/researcher-task.json
Commit using git with message prefix: [researcher-task] if you modify files.
Return the full TaskReport JSON as your final response."
`;

exports[`buildInitialMessage > renders reviewer assignment 1`] = `
"## Stage Review Task Assignment

## Shared Project Context
[FIXTURE HANDOFF]

**Task ID:** reviewer-task
**Stage ID:** stage-1
**Type:** review
**Attempt:** 2 of 4

### Description
Complete the reviewer task

### Checklist
- [REQUIRED] first acceptance check

### Instructions
Review the stage objectives, expected outcomes, acceptance criteria, task list, worker reports, changed artifacts, and any existing summary drafts.
For data-heavy or ML/research stages, validate data provenance/suitability, leakage controls, statistical acceptance, benchmark comparison, and whether conclusions are supported.
Write optional detailed notes to: .saivage/stages/stage-1/reviews/
Write the report to: .saivage/stages/stage-1/reports/reviewer-task.json
Commit using git with message prefix: [reviewer-task] if you modify files.
Return the full TaskReport JSON as your final response."
`;

exports[`buildInitialMessage > renders reviewer follow-up assignment 1`] = `
"## Stage Review Task Assignment - Follow-up Review 2

## Shared Project Context
[FIXTURE HANDOFF]

**Task ID:** reviewer-task
**Stage ID:** stage-1
**Type:** review
**Attempt:** 2 of 4

### Description
Complete the reviewer task

### Checklist
- [REQUIRED] first acceptance check

### Instructions
This is a follow-up review in the same stage-scoped reviewer session. Your previous reports and reasoning are above in this conversation. Focus first on the new corrective-task results, then verify whether earlier issues are resolved or still open.
Review the stage objectives, expected outcomes, acceptance criteria, task list, worker reports, changed artifacts, and any existing summary drafts.
For data-heavy or ML/research stages, validate data provenance/suitability, leakage controls, statistical acceptance, benchmark comparison, and whether conclusions are supported.
Write optional detailed notes to: .saivage/stages/stage-1/reviews/
Write the report to: .saivage/stages/stage-1/reports/reviewer-task.json
Commit using git with message prefix: [reviewer-task] if you modify files.
Return the full TaskReport JSON as your final response."
`;
